--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "c2ba",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^5.1.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
