--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d dist",
     "dev": "nodemon --exec babel-node src/app.js",
-    "start": "node dist/app.js"
+    "start": "npm run build && node dist/app.js"
   },
   "author": "c2ba",
   "license": "MIT",
